# rust_learn

rust_learn/: Cargo.toml
rust_learn/exception_error/: Cargo.toml
rust_learn/exception_error/src/: main.rs
rust_learn/lang/: Cargo.toml
rust_learn/lang/src/: lib.rs  main.rs
rust_learn/lang/src/c00_variables/: mod.rs  uninitialized.rs
rust_learn/lang/src/c01_type/base_types/: base_type.rs
rust_learn/language/: Cargo.toml
rust_learn/language/src/: main.rs
rust_learn/language/src/c00_variables/: mod.rs  uninitialized.rs  variables.rs
rust_learn/language/src/c01_types/base_types/: base.rs  never.rs  unname.rs
rust_learn/language/src/c01_types/compound_types/: enum.rs  struct.rs  tuple.rs  union.rs
rust_learn/language/src/c01_types/type_behave_trait/: sized_unsized.rs
rust_learn/language/src/c01_types/type_mem_trait/: sized_unsized.rs
rust_learn/language/src/c02_types_trait/type_variable_runtime_behave_trait/: copy_clone.rs
rust_learn/src/: main.rs
rust_learn/src/base/00_Variables/: variables.rs
