[package]
name = "rust_learn"
version = "0.1.0"
edition = "2021"

autobins = false
autoexamples = false
autotests = false
autobenches = false

[lib]
name = "rust_learn"    # The name of the target.
path = "src/lib.rs"    # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
doc = true             # Is documented by default.
plugin = false         # Used as a compiler plugin (deprecated).
proc-macro = false     # Set to `true` for a proc-macro library.
harness = true         # Use libtest harness.
edition = "2015"       # The edition of the target.
crate-type = ["lib"]   # The crate types to generate.
required-features = [] # Features required to build this target (N/A for lib).

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# ...
postgres = []
sqlite = []
tools = []

[[bin]]
name = "rust_learn"
required-features = []

[dependencies]
